--- a/public/assets/frontend/css/style.css
+++ b/public/assets/frontend/css/style.css
@@ -5,6 +5,72 @@ body{
     background-repeat: no-repeat;
 }
 
+section{
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
+}
+
+
+.navbar{
+    background-color: #fff;
+    height: 80px;
+    margin: 20px;
+    border-radius: 16px;
+    padding: 0.5rem;
+    box-shadow: 2px 1px 20px 1px #e1e1e1;;
+}
+
+.navbar a{
+    font-family: 'Varuna', sans-serif;
+    font-weight: bold;
+}
+
+.navbar-toggler{
+    border: none;
+    font-size: 1.25rem;
+}
+
+.navbar-toggler:focus, .btn-close:focus {
+    box-shadow: none;
+    outline: none;
+}
+
+.home{
+    background: #50c878;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-content h1{
+    font-family: 'Varuna', sans-serif;
+    font-weight: bold;
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #fff;
+}
+
+.home-content h5{
+    font-family: 'Varuna', sans-serif;
+    font-weight: bold;
+    font-weight: 700;
+    color: #fff;
+}
+
+.home-content h1:nth-of-type(2){
+    margin-bottom: 2rem;
+}
+
+.home-content p{
+    font-family: 'Varuna', sans-serif;
+    font-size: 1.3rem;
+    color: #fff;
+}
+
+.home-img img{
+    width: 30vw;
+}
+
 .container .label_packet {
     width: 250px;
     height: 35px;
@@ -42,6 +108,32 @@ body{
 .card:hover {
     transform: scale(1.1);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.icon-container{
+    position: relative;
+    display: inline-block;
+}
+
+.popup{
+    visibility: hidden;
+    width: 180px;
+    background-color: #50c878;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 10px;
+    position: absolute;
+    font-size: 13px;
+    z-index: 1;
+    top: 0%;
+    left: 670%;
+    transform: translateX(-50%);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.icon-container:hover .popup{
+    visibility: visible;
 }
 
 @media (max-width: 991px){
